# osmium-tool

./: .clang-tidy  .dockerignore  .gitattributes  .gitignore  .travis.yml  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE-rapidjson.txt  Makefile  README.md  appveyor.yml  build-appveyor.bat  build-local-vcpkg.bat  build-local.bat  fix-formatting.sh  iwyu.imp  osmium-wrapper.in
man/: CMakeLists.txt  common-options.md  input-options.md  manpage.template  osmium-add-locations-to-ways.md  osmium-add-refs.md  osmium-apply-changes.md  osmium-cat.md  osmium-changeset-filter.md  osmium-check-refs.md  osmium-create-locations-index.md  osmium-derive-changes.md  osmium-diff.md  osmium-export.md  osmium-extract.md  osmium-file-formats.md  osmium-fileinfo.md  osmium-getid.md  osmium-getparents.md  osmium-index-types.md  osmium-merge-changes.md  osmium-merge.md  osmium-output-headers.md  osmium-query-locations-index.md  osmium-removeid.md  osmium-renumber.md  osmium-show.md  osmium-sort.md  osmium-tags-count.md  osmium-tags-filter.md  osmium-time-filter.md  osmium.md  output-options.md  progress-options.md
src/: CMakeLists.txt  cmd.cpp  cmd.hpp  cmd_factory.cpp  command_add_locations_to_ways.cpp  command_add_locations_to_ways.hpp  command_add_refs.cpp  command_add_refs.hpp  command_apply_changes.cpp  command_apply_changes.hpp  command_cat.cpp  command_cat.hpp  command_changeset_filter.cpp  command_changeset_filter.hpp  command_check_refs.cpp  command_check_refs.hpp  command_create_locations_index.cpp  command_create_locations_index.hpp  command_derive_changes.cpp  command_derive_changes.hpp  command_diff.cpp  command_diff.hpp  command_export.cpp  command_export.hpp  command_extract.cpp  command_extract.hpp  command_fileinfo.cpp  command_fileinfo.hpp  command_getid.cpp  command_getid.hpp  command_getparents.cpp  command_getparents.hpp  command_help.cpp  command_help.hpp  command_merge.cpp  command_merge.hpp  command_merge_changes.cpp  command_merge_changes.hpp  command_query_locations_index.cpp  command_query_locations_index.hpp  (+30 more)
src/export/: export_format.hpp  export_format_json.cpp  export_format_json.hpp  export_format_pg.cpp  export_format_pg.hpp  export_format_spaten.cpp  export_format_spaten.hpp  export_format_text.cpp  export_format_text.hpp  export_handler.cpp  export_handler.hpp  options.hpp  ruleset.hpp
src/extract/: error.hpp  extract.cpp  extract.hpp  extract_bbox.cpp  extract_bbox.hpp  extract_polygon.cpp  extract_polygon.hpp  geojson_file_parser.cpp  geojson_file_parser.hpp  geometry_util.cpp  geometry_util.hpp  io.hpp  osm_file_parser.cpp  osm_file_parser.hpp  poly_file_parser.cpp  poly_file_parser.hpp  strategy.hpp  strategy_complete_ways.cpp  strategy_complete_ways.hpp  strategy_complete_ways_with_history.cpp  strategy_complete_ways_with_history.hpp  strategy_simple.cpp  strategy_simple.hpp  strategy_smart.cpp  strategy_smart.hpp
test/: .gitattributes  CMakeLists.txt  unit_tests.cpp
test/add-locations-to-ways/: CMakeLists.txt  input-rel.osm  input.osm  output-n.osm  output-rel.osm  output.osm  run_test_check_no_stderr.cmake
test/add-refs/: CMakeLists.txt  in10.id  in10.osm  in29.id  in30.osm  in32.osm  in39.osm  out10.osm  out21.osm  out31.osm  relloop.id  relloop.osm
test/apply-changes/: CMakeLists.txt  input-change-only-version.osc  input-data-low.osm  input-history.osm  input-patch-old-version.osc  input-patch-old-version.osh  input-redact-and-update.osc  input-redact-and-update.osh  input-redact-metadata.osc  input-redact-metadata.osh  input-version+timestamp.osm  input-version.osc  output-data-low.osm  output-data.osm  output-history.osh  output-patch-old-version.osh  output-redact-and-update.osh  output-redact-metadata.osh  output-version-applied-on-all.osm  output-version-applied-on-version+timestamp-low.osm  output-version-applied-on-version+timestamp.osm  output.osh
test/cat/: CMakeLists.txt  input-with-locations.osm.pbf  input-without-locations.osm.pbf  input1.osm  input1.osm.bz2  input1.osm.pbf  input2.osm  output-cat12.osm  output-cat21.osm  output1.osm.opl  test_setup.cpp  test_warning.cpp
test/changeset-filter/: CMakeLists.txt  input-open.osm  input1.osm  output-empty.osm  output-open.osm  output1-all.osm  output1-first.osm  output1-second.osm
test/check-refs/: CMakeLists.txt  fail-n-in-r.osm  fail-n-in-w.osm  fail-r-in-r-1.osm  fail-w-in-r.osm  nw-okay.osm  nwr-fail.osm  nwr-okay.osm  okay.osm  way-okay.osm
test/derive-changes/: CMakeLists.txt  input1-only-version-timestamp.osm  input1-only-version.osm  input1.osm  input2-all-with-relation.osm  input2-only-version-timestamp.osm  input2-only-versions.osm  output-2-only-version-timestamp.osc  output-2-version-with-all.osc  output-2-version-with-version-timestamp.osc  output-incr-version.osc  output-keep-details.osc  output.osc
test/diff/: CMakeLists.txt  input1.osm  input1uid.osm  input2.osm  input2uid.osm  output-c.opl  output-compact  output-compact-c  output-compact-c-nouid  output-compact-c-nouid-opl  output-same  output.opl  test_setup.cpp
test/export/: CMakeLists.txt  config-empty-empty.json  config-empty-tag.json  config-empty-tagx.json  config-false-false.json  config-null-null.json  config-null-tag.json  config-tag-empty.json  config-tag-null.json  config-tag-tag.json  config-tagx-empty.json  config-tagx-tagx.json  config-true-true.json  config-undefined.json  empty-tag.txt  input-chars.osm  input-incomplete-rel-missing-way.osm  input-incomplete-relation.osm  input-missing-node.osm  input-mp.osm  input-single-node-way.osm  input.osm  output-attr.geojson  output-chars.geojson  output-cnt.geojsonseq  output-empty.geojson  output-incomplete-relation.geojson  output-missing-node.geojson  output-mp.geojson  output-uid.geojsonseq  output-untagged.pg  output-untagged.spaten  output.geojson  output.geojsonseq  output.pg  output.spaten  way-all-n.txt  way-all.txt  way-empty-tag.txt  way-empty-tagx.txt  (+8 more)
test/extract/: CMakeLists.txt  config.json  input-way-starts-outside.osm  input1.osm  input64.osm  missing-end-polygon.poly  missing-end-ring.poly  (+38 more)
(+271 files in other folders)
